--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,10 @@
         "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
+        "laravel/nova": "~2.0",
         "laravel/tinker": "^1.0",
-        "laravel/nova": "~2.0"
+        "spatie/laravel-backup": "^5.12",
+        "squareboat/sneaker": "^5.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
