--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "laravel/nova": "~2.0",
         "laravel/tinker": "^1.0",
         "spatie/laravel-backup": "^5.12",
+        "spatie/laravel-csp": "^2.1",
         "squareboat/sneaker": "^5.0"
     },
     "require-dev": {
